--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 <script src="js/wow.js"></script>
-<link rel="stylesheet" type="text/css" href="css/animate.css">
-<link rel="stylesheet" type="text/css" href="css/230.css">
+<link rel="stylesheet" type="animate.css">
+<link rel="stylesheet" type="230.css">
 <body>
 <div class="containr">
 	<div class="header one">
@@ -33,39 +33,39 @@ My official gallery of photographs and digital art is at devpictur.es - where yo
 <div class="header wow flipInY zoomDown own">my works</div>
 <div class="cards">
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0027.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0010.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0011.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0027.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0010.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0011.jpg"></div>
 
 	</div>
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0012.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0013.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0014.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0012.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0013.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0014.jpg"></div>
 
 	</div>
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0015.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0016.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0017.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0015.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0016.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0017.jpg"></div>
 
 	</div>
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0018.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0019.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0020.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0018.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0019.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0020.jpg"></div>
 
 	</div>
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0021.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0022.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0023.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0021.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0022.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0023.jpg"></div>
 
 	</div>
 	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="css/images/pics/IMG-20170806-WA0024.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="css/images/pics/IMG-20170806-WA0025.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="css/images/pics/IMG-20170806-WA0026.jpg"></div>
+		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0024.jpg"></div>
+		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0025.jpg"></div>
+		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0026.jpg"></div>
 
 	</div>
 </div>
