--- a/index.html
+++ b/index.html
@@ -12,6 +12,140 @@
 <script src="wow.js"></script>
 <link rel="stylesheet" type="animate.css">
 <link rel="stylesheet" type="230.css">
+	<style>.left{
+	float: right;
+	width: auto;
+	color: #363636;
+	font-family: 'Passion One', cursive;
+
+}	
+.header{
+	height: 75px;
+	width: 100%;
+	background-image: url("images/img3.jpg");
+	line-height: 75px;
+	letter-spacing: 2px;
+font-family: 'Shadows Into Light', cursive;
+
+}
+.benji{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 10;
+	height: 75px;
+	width: 100%;
+	background-image: url("images/img3.jpg");
+	line-height: 75px;
+	letter-spacing: 2px;
+font-family: 'Shadows Into Light', cursive;
+}
+.padder-right{
+	margin-right: 100px;
+}
+.padder-left{
+	margin-left: 50px;
+}
+.heading{
+	font-size: 50px;
+	color: white;
+}
+.section{
+	width: 100%;
+	height: 100vh;
+}
+.aboutus{
+	margin-top: 0px;
+	position: relative;
+		background-image: url("images/img2.jpg");
+		background-attachment: fixed;
+		background-position: center;
+}
+.what-we-do{
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	background-image: url("images/img.jpg");
+	background-attachment: fixed;
+	background-position: center;
+}
+.descriptions{
+	font-size: 20px;
+	/*font-weight: bold;*/
+	color: white;
+	margin: 0 auto;
+	width: 50%;
+	height: auto;
+	padding-top: 25vh;
+	text-align: center;
+}
+.footer{
+	position: relative;
+	width: 100%;
+height: 200px;
+background-image: url("images/img3.jpg");
+}
+.cards{
+	background-image: url("images/img1.jpg");
+	background-attachment: fixed;
+background-repeat: no-repeat;
+backface-visibility: .1;
+background-size: cover;
+	height: auto;
+	width: 100%;
+	padding-bottom: 40px;
+}
+.card{
+	opacity: 1;
+	clear: all;
+	position: relative;
+	height: 400px;
+	background-position: center;
+	transition: all 2s ease-out;
+	padding: 20px;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+
+}
+.card img{
+	opacity: 1;
+	clear: all;
+	width: 400px;
+	height: 400px;
+object-fit: cover;
+	border-radius: 200px;
+	transition: all 2s ease-out;
+}
+.card img:hover{
+	border-radius: 0px;
+	transform: all;
+}
+.card:hover{
+	transform: scale(1.1);
+	z-index: 2;
+	opacity: 1;
+}
+.address{
+	font-size: 20px;
+	font-family: 'Shadows Into Light', cursive;
+float: left;
+padding-left: 100px;
+color: white;
+padding-top: 50px;
+}
+.nav{
+	transition: all 1s ease-out;
+	margin-right: 50px;
+}
+.nav:hover{
+transform: rotate(360deg);
+}
+.own{
+	font-size: 30px;
+	color: white;
+	text-align: center;
+	background-color: red;
+}</style>
 <body>
 <div class="containr">
 	<div class="header one">
