--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 .header{
 	height: 75px;
 	width: 100%;
-	background-image: url("images/img3.jpg");
+	background-image: url("img3.jpg");
 	line-height: 75px;
 	letter-spacing: 2px;
 font-family: 'Shadows Into Light', cursive;
@@ -34,7 +34,7 @@ font-family: 'Shadows Into Light', cursive;
 	z-index: 10;
 	height: 75px;
 	width: 100%;
-	background-image: url("images/img3.jpg");
+	background-image: url("img3.jpg");
 	line-height: 75px;
 	letter-spacing: 2px;
 font-family: 'Shadows Into Light', cursive;
@@ -56,7 +56,7 @@ font-family: 'Shadows Into Light', cursive;
 .aboutus{
 	margin-top: 0px;
 	position: relative;
-		background-image: url("images/img2.jpg");
+		background-image: url("img2.jpg");
 		background-attachment: fixed;
 		background-position: center;
 }
@@ -64,7 +64,7 @@ font-family: 'Shadows Into Light', cursive;
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background-image: url("images/img.jpg");
+	background-image: url("img.jpg");
 	background-attachment: fixed;
 	background-position: center;
 }
@@ -82,10 +82,10 @@ font-family: 'Shadows Into Light', cursive;
 	position: relative;
 	width: 100%;
 height: 200px;
-background-image: url("images/img3.jpg");
+background-image: url("img3.jpg");
 }
 .cards{
-	background-image: url("images/img1.jpg");
+	background-image: url("img1.jpg");
 	background-attachment: fixed;
 background-repeat: no-repeat;
 backface-visibility: .1;
