--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 <script src="wow.js"></script>
-<link rel="shortcut icon" type="image/png" href="/favi.png"/>
+<link rel="shortcut icon" type="image/png" href="favi.png"/>
 	<style>
 		@charset "UTF-8";
 
