--- a/index.html
+++ b/index.html
@@ -1782,6 +1782,16 @@ My official gallery of photographs and digital art is at devpictur.es - where yo
 
 	</div>
 </div>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- one -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2165478373133932"
+     data-ad-slot="4031052770"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div class="section what-we-do">
 	<p class="descriptions wow fadeInUp">
 		I have been taking photos ever since I won an instamatic camera at age six. As a child I remember experimenting with 3D pictures by taking two different shots of the same scene. Of course everything was film and print back then. I blew my pocket money pretty quickly! <br>
