--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dev-photographer</title>
+	<title>Felix George</title>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -1727,86 +1727,11 @@ transform: rotate(360deg);
 }</style>
 <body>
 <div class="containr">
-	<div class="header one">
-		<div class="row">
-			<div class="col-md-5 heading padder-left wow bounceIn">Dev-photography</div>
-			<div class="nav col-md-2 left padder-right">Home</div>
-			<div class="nav col-md-2 left">Contact</div>
-			<div class="nav col-md-2 left">Services</div>
-            
-		</div>
-	</div>
-<div class="section aboutus">
-	<p class="descriptions wow fadeInUp">
-		I am a professional photographer and digital artist. I particularly specialise in fine-art contemporary landscape and portrait photography, and I especially love shooting in Scotland and creating images with a "fairy tale" feel.<br>  
-My official gallery of photographs and digital art is at devpictur.es - where you can order prints and canvases and also purchase digital downloads; most of my images are available as smaller free downloads too! My Dev's photography blog is over on my gallery too.  
+	
+		
 
-	</p>
-</div>
-<div class="header wow flipInY zoomDown own">my works</div>
-<div class="cards">
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0027.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0010.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0011.jpg"></div>
+	
 
-	</div>
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0012.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0013.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0014.jpg"></div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0015.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0016.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0017.jpg"></div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0018.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0019.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0020.jpg"></div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0021.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0022.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0023.jpg"></div>
-
-	</div>
-	<div class="row">
-		<div class="col-md-4 card wow fadeInLeft"><img src="IMG-20170806-WA0024.jpg"></div>
-		<div class="col-md-4 card wow fadeInUp"><img src="IMG-20170806-WA0025.jpg"></div>
-		<div class="col-md-4 card wow fadeInRight"><img src="IMG-20170806-WA0026.jpg"></div>
-
-	</div>
-</div>
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- one -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2165478373133932"
-     data-ad-slot="4031052770"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<div class="section what-we-do">
-	<p class="descriptions wow fadeInUp">
-		I have been taking photos ever since I won an instamatic camera at age six. As a child I remember experimenting with 3D pictures by taking two different shots of the same scene. Of course everything was film and print back then. I blew my pocket money pretty quickly! <br>
-
-I had the wonderful privilege of growing up in the wild, open and unspoilt surroundings of the Indian Highlands, so inevitably my love affair with India's staggering landscapes began there along with an understanding of composition and light forms. Over the years I've developed a style that pushes the boundary between photography and art. 
-
-
-	</p>
-</div>
-</div>
-<div class="footer">
-	<p class="address wow fadeInUp">NIT Calicut <br>
-    Chathamangalam <br>
-    C-hostel
-    "230"</p>
 </div>
 </body>
 <script type="text/javascript">
