--- a/index.html
+++ b/index.html
@@ -1597,7 +1597,8 @@
 	color: #363636;
 	font-family: 'Passion One', cursive;
 
-}	
+}
+
 .header{
 	height: 75px;
 	width: 100%;
@@ -1724,12 +1725,17 @@ transform: rotate(360deg);
 	color: white;
 	text-align: center;
 	background-color: red;
+	.containr{
+	font-size:70px;
+		text-align:center;
+		line-height:100vh;
+	}
 }</style>
 <body>
 <div class="containr">
 	
 		
-
+Neha Pradeep is a FOOL!
 	
 
 </div>
