--- a/index.html
+++ b/index.html
@@ -1724,12 +1724,12 @@ transform: rotate(360deg);
 	font-size: 30px;
 	color: white;
 	text-align: center;
-	background-color: red;
+	background-color: red;}
 	.containr{
 	font-size:70px;
 		text-align:center;
 		line-height:100vh;
-	}
+	
 }</style>
 <body>
 <div class="containr">
